src/objects/Contact.object
<CustomObject>
    <fields>
        <fullName>AccountType__c</fullName>
        <formula>Account.RecordType.Name</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Account Type</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalAccountsKey__c</fullName>
        <label>Additional Accounts Key</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>AdditionalAccounts__c</fullName>
        <inlineHelpText>Please use this field to identify any other Accounts this Contact is associated to. Include Store ID, Store Name and any other relevant attributes used to identify the Account.</inlineHelpText>
        <label>Additional Accounts</label>
        <length>32768</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>BirthDay__c</fullName>
        <label>Birth Day</label>
        <picklist>
            <controllingField>BirthMonth__c</controllingField>
            <picklistValues>
                <fullName>01</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>02</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>03</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>04</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>05</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>06</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>07</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>08</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>09</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>10</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>11</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>12</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>13</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>14</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>15</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>16</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>17</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>18</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>19</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>20</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>21</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>22</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>23</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>24</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>25</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>26</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>27</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>28</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>29</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>30</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BirthMonth__c</fullName>
        <label>Birth Month</label>
        <picklist>
            <picklistValues>
                <fullName>January</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>February</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>March</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>April</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>May</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>June</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>July</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>August</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>September</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>October</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>November</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>December</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>BirthdayNoYear__c</fullName>
        <formula>IF(text(BirthDay__c) == null || text(BirthMonth__c) == null, null, text(BirthMonth__c) &amp; &quot;/&quot; &amp; text(BirthDay__c))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <inlineHelpText>Month / Day.</inlineHelpText>
        <label>Birthday</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>BusinessObjective__c</fullName>
        <label>Business Objective</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Children__c</fullName>
        <inlineHelpText>Names, age, interests, etc.</inlineHelpText>
        <label>Children</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>CollegeAffiliation__c</fullName>
        <label>College / Affiliation</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FacebookURL__c</fullName>
        <label>Facebook URL</label>
        <type>Url</type>
    </fields>
    <fields>
        <fullName>FavoriteBeamProducts__c</fullName>
        <label>Favorite Beam Products</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>FavoriteFoodorRestaurants__c</fullName>
        <label>Favorite Food or Restaurants</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Favorite_Sports_Teams__c</fullName>
        <label>Favorite Sports Teams</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Inactive__c</fullName>
        <defaultValue>false</defaultValue>
        <inlineHelpText>Is contact inactive?</inlineHelpText>
        <label>Inactive</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>InstagramHandle__c</fullName>
        <label>Instagram Handle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>InterestsHobbies__c</fullName>
        <label>Interests &amp; Hobbies</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Key__c</fullName>
        <description>This field is used for Contact consolidation. Contacts will up loaded with a unique key which can then be used to verify if new Contacts sent from the States via their excel templates need to be upserted or updated.</description>
        <label>Key</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Languages__c</fullName>
        <label>Languages</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>MilitaryService__c</fullName>
        <label>Military Service</label>
        <picklist>
            <picklistValues>
                <fullName>No</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Yes</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PersonalGoals__c</fullName>
        <label>Personal Goals</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>PreferredMethod__c</fullName>
        <label>Preferred Method</label>
        <picklist>
            <picklistValues>
                <fullName>Email</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Fax</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Mobile</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Phone</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>PrimaryRole__c</fullName>
        <label>Primary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Bartender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host/Hostess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media / Trade Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SecondaryRole__c</fullName>
        <label>Secondary Role</label>
        <picklist>
            <picklistValues>
                <fullName>Bartender</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Buyer</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Chef</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Clerk</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Host/Hostess</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Manager</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Media / Trade Member</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Other</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Owner</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Sales Rep</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>Servers</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>SpousesInterests__c</fullName>
        <label>Spouses Interests</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>SpousesName__c</fullName>
        <label>Spouses Name</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>TwitterHandle__c</fullName>
        <label>Twitter Handle</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>WorkAnniversary__c</fullName>
        <label>Work Anniversary</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>WorkHistory__c</fullName>
        <label>Work History</label>
        <type>TextArea</type>
    </fields>
    <listViews>
        <fullName>AllContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>PrimaryRole__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>PreferredMethod__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <label>All Contacts</label>
    </listViews>
    <listViews>
        <fullName>MyContacts</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>PrimaryRole__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>PreferredMethod__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Mine</filterScope>
        <label>My Contacts</label>
    </listViews>
    <listViews>
        <fullName>NewThisWeek</fullName>
        <columns>FULL_NAME</columns>
        <columns>ACCOUNT.NAME</columns>
        <columns>CONTACT.TITLE</columns>
        <columns>PrimaryRole__c</columns>
        <columns>CONTACT.PHONE1</columns>
        <columns>CONTACT.PHONE3</columns>
        <columns>CONTACT.EMAIL</columns>
        <columns>CONTACT.PHONE2</columns>
        <columns>PreferredMethod__c</columns>
        <columns>CORE.USERS.ALIAS</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>CONTACT.CREATED_DATE</field>
            <operation>equals</operation>
            <value>THIS_WEEK</value>
        </filters>
        <label>New This Week</label>
    </listViews>
    <sharingModel>Private</sharingModel>
    <validationRules>
        <fullName>VerifyRolesAreDifferent</fullName>
        <active>true</active>
        <description>Verify that the Primary Role and Secondary Role have different values</description>
        <errorConditionFormula>IF(TEXT( PrimaryRole__c ) = TEXT( SecondaryRole__c ), IF(ISBLANK(TEXT(PrimaryRole__c)), false, true), false)</errorConditionFormula>
        <errorMessage>Please ensure you are selecting different values for primary and secondary roles.</errorMessage>
    </validationRules>
</CustomObject>